--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EVRP-ACO</title>
-  <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+  <!-- <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" /> -->
+  <!-- <script defer src="https://pyscript.net/latest/pyscript.js"></script> -->
 </head>
 
 <body>
   <py-config>
-    
+
   </py-config>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <py-script>
+  <!-- <py-script>
     print('Hello, World!')
-  </py-script>
+  </py-script> -->
 </body>
 
 </html>
